--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
   "name": "rollup-plugin-stylup",
-  "description": "A Rollup.js plugin to compile Stylus and inject CSS Modules",
+  "description": "A Rollup.js plugin to compile Stylus files",
   "version": "1.3.0",
-  "author": "Zach Kelling <z@zeekay.io> (zeekay.io)",
+  "author": "Zach Kelling <z@zeekay.io>",
   "bugs": {
     "url": "https://github.com/zeekay/rollup-plugin-stylup/issues"
-  },
-  "dependencies": {
-    "rollup-pluginutils": "2.0.1",
-    "stylus": "~0.54.5"
   },
   "devDependencies": {
     "cake-bundle": "0.1.5",
@@ -17,8 +13,11 @@
     "cake-test": "0.1.0",
     "cake-version": "0.1.9",
     "coffee-script": "1.12.4",
-    "mocha": "~3.2.0",
+    "mocha": "3.2.0",
     "shortcake": "1.2.5"
+  },
+  "peerDependencies": {
+    "stylus": "^0.54.5"
   },
   "files": [
     "dist/"
