--- a/package.json
+++ b/package.json
@@ -3,8 +3,27 @@
   "description": "A Rollup.js plugin to compile Stylus files",
   "version": "1.3.0",
   "author": "Zach Kelling <z@zeekay.io>",
+  "license": "MIT",
+  "homepage": "https://github.com/zeekay/rollup-plugin-stylup",
+  "repository": "github:zeekay/rollup-plugin-stylup",
   "bugs": {
     "url": "https://github.com/zeekay/rollup-plugin-stylup/issues"
+  },
+  "keywords": [
+    "css",
+    "css-modules",
+    "rollup-plugin"
+  ],
+  "files": [
+    "dist/",
+    "src/"
+  ],
+  "main": "dist/lib.js",
+  "module": "dist/lib.mjs",
+  "jsnext:main": "dist/lib.mjs",
+  "peerDependencies": {
+    "rollup": ">=0.34.1 <1",
+    "stylus": "^0.54.5"
   },
   "devDependencies": {
     "cake-bundle": "0.2.6",
@@ -15,29 +34,6 @@
     "coffee-script": "1.12.4",
     "mocha": "3.2.0",
     "shortcake": "1.2.5"
-  },
-  "peerDependencies": {
-    "stylus": "^0.54.5"
-  },
-  "files": [
-    "dist/"
-  ],
-  "homepage": "https://github.com/zeekay/rollup-plugin-stylup",
-  "jsnext:main": "dist/rollup-plugin-stylup.es.js",
-  "module": "dist/rollup-plugin-stylup.es.js",
-  "keywords": [
-    "css",
-    "css-modules",
-    "rollup-plugin"
-  ],
-  "license": "MIT",
-  "main": "dist/rollup-plugin-stylup.cjs.js",
-  "peerDependencies": {
-    "rollup": ">=0.34.1 <1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/zeekay/rollup-plugin-stylup.git"
   },
   "scripts": {
     "build": "cake build",
