--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "sake-bundle": "^0.6.3",
     "sake-outdated": "^0.1.28",
     "sake-publish": "^0.1.16",
-    "sake-version": "^0.1.19"
+    "sake-test": "^0.1.5",
+    "sake-version": "^0.1.19",
+    "stylus": "^0.54.5"
   },
   "scripts": {
     "build": "sake build",
